# python-mastery-playground

./: .conda-env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT_MANAGERS_LEARNING_SUMMARY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  main.py  plan.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  link-check-config.json  release.yml  spellcheck-config.yml  wordlist.txt
challenges/: README.md
challenges/concurrency/: challenge_01_parallel_map.py  challenge_02_rate_limiter.py  challenge_03_producer_consumer.py  solution_01_parallel_map.py  solution_02_rate_limiter.py  solution_03_producer_consumer.py
challenges/context_managers/: challenge_01_temp_directory.py  challenge_02_redirect_stdout.py  challenge_03_transaction.py  solution_01_temp_directory.py  solution_02_redirect_stdout.py  solution_03_transaction.py
challenges/control_flow/: challenge_01_parse_config.py  challenge_02_pipeline_builder.py  challenge_03_state_machine.py  solution_01_parse_config.py  solution_02_pipeline_builder.py  solution_03_state_machine.py
challenges/data_structures/: challenge_01_flatten.py  challenge_02_group_by.py  solution_02_group_by.py  solution_03_lru_dict.py
challenges/datastructures/: challenge_03_lru_dict.py  solution_01_flatten.py
challenges/decorators/: challenge_01_log_calls.py  challenge_02_validate_args.py  challenge_03_memoize_async.py  solution_01_log_calls.py  solution_02_validate_args.py  solution_03_memoize_async.py
challenges/functional/: challenge_01_compose.py  challenge_02_curry.py  challenge_03_transducer.py  solution_01_compose.py  solution_02_curry.py  solution_03_transducer.py
challenges/internals/: challenge_01_count_refs.py  challenge_02_find_cycles.py  challenge_03_memory_profile.py  solution_01_count_refs.py  solution_02_find_cycles.py  solution_03_memory_profile.py
challenges/oop/: challenge_01_vector.py  challenge_02_observable.py  challenge_03_singleton_meta.py  solution_01_vector.py  solution_02_observable.py  solution_03_singleton_meta.py
challenges/testing/: challenge_01_mock_time.py  solution_02_fake_filesystem.py
challenges/testing_patterns/: challenge_02_fake_filesystem.py  challenge_03_snapshot_test.py  solution_01_mock_time.py  solution_03_snapshot_test.py
concurrency/: multiprocessing_demo.py  threading_demo.py
context_managers/: async_ctx.py  reentrant.py  state.py  timer.py  utilities.py
datastructures/: builtins.py
decorators/: retry.py
docs/: concurrency.md  context_managers.md  decorators.md  oop.md
examples/: CONCURRENCY.md  CONTEXT_MANAGERS.md  CONTROL_FLOW.md  DATA_STRUCTURES.md  DECORATORS.md  FUNCTIONAL.md  INTERNALS.md  OOP.md  README.md  TESTING.md  cache.py  conc_asyncio_basics.py  conc_asyncio_patterns.py  conc_multiprocessing.py  conc_threading.py  context_manager_examples.py  ctx_async.py  ctx_reentrant.py  ctx_state.py  ctx_timer.py  decorator_cache.py  decorator_rate_limit.py  decorator_retry.py  decorator_timer.py  ds_collections.py  ds_comprehensions.py  ds_generators.py  ds_slicing.py  flow_loops.py  flow_pattern_matching.py  flow_pipelines.py  func_immutability.py  func_itertools.py  func_partial.py  func_reduce.py  internals_bytecode.py  internals_gc.py  internals_memory.py  internals_refcount.py  oop_advanced_classes.py  (+9 more)
examples/integration/: README.md  async_web_scraper.py  cli_framework.py  data_pipeline.py  plugin_system.py  test_doubles_demo.py  thread_safe_cache.py
functional/: functional_tools.py
internals/: memory_management.py
oop/: __init__.py  advanced_classes.py  inheritance.py  magic_methods.py
src/python_mastery/: __init__.py  __main__.py  exceptions.py
src/python_mastery/concurrency/: __init__.py  asyncio_demo.py  asyncio_patterns.py  multiprocessing_demo.py  threading_demo.py
src/python_mastery/context_managers/: README.md  __init__.py  async_ctx.py  reentrant.py  state.py  timer.py  utilities.py
src/python_mastery/control_flow/: __init__.py  advanced_flow.py
src/python_mastery/datastructures/: __init__.py  builtins.py  collections_demo.py
src/python_mastery/decorators/: __init__.py  cache.py  rate_limit.py  retry.py  timer.py
src/python_mastery/functional/: __init__.py  functional_tools.py  immutability.py
src/python_mastery/internals/: __init__.py  bytecode_inspector.py  memory_management.py
src/python_mastery/oop/: __init__.py  advanced_classes.py  inheritance.py  magic_methods.py  metaclasses.py
src/python_mastery/testing_patterns/: __init__.py  external_services.py  type_safety.py
testing_patterns/: __init__.py
tests/: conftest.py  test_advanced_pytest.py  test_asyncio_patterns.py  test_concurrency.py  test_context_managers.py  test_control_flow_patterns.py  test_datastructures.py  test_decorators.py  test_functional.py  test_internals.py  test_oop.py  test_testing_patterns.py
