[metadata]
name = python-mastery-playground
version = 2.0.0
description = A comprehensive playground for mastering Python (Decorators, Context Managers, OOP, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
author = Python Mastery Project
author_email = learning@example.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Education
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = decorators, context_managers, datastructures, oop
python_requires = >=3.10
install_requires =

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy

[options.package_data]
* = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v
